@@ -22,7 +22,7 @@ function QRoute( ) {
 QRoute.prototype.addRoute = function addRoute( routeName, handlers ) {
     if (typeof routeName !== 'string') {
         // reinsert removed route
-        var route = routeName;
+        var route = routeName.type === 'mappedRoute' && routeName._route || routeName;
         if (route.type === 'lit') this._literals[info.name] = route;
         else this._patterns.push(route);
     }
@@ -43,6 +43,9 @@ QRoute.prototype.addRoute = function addRoute( routeName, handlers ) {
  * remove a route
  */
 QRoute.prototype.removeRoute = function removeRoute( info ) {
+    if (info.type === 'mappedRoute') info = info._route;
+    // TODO: maybe also match by routeName, so can remove /path/name like add /path/name
+
     if (info.type === 'lit') {
         // TODO: maybe support multiple routes for the same path?
         delete this._literals[info.name];
@@ -72,6 +75,7 @@ QRoute.prototype.mapRoute = function mapRoute( querypath ) {
     if (qmark >= 0) { tail = querypath.slice(qmark+1); querypath = querypath.slice(0, qmark); }
     if ((route = this._literals[querypath])) {
         return {
+            type: 'mappedRoute',
             path: querypath,
             name: route.name,
             tail: tail || "",
@@ -87,6 +91,7 @@ QRoute.prototype.mapRoute = function mapRoute( querypath ) {
             var names = patt.names;
             for (j=0; j<names.length; j++) vars[names[j]] = match[j+1];
             return {
+                type: 'mappedRoute',
                 path: querypath,
                 name: patt.name,
                 tail: match[j+1],
